# GRSA

./: README.md
Data tacolab/Dim10/: results_mean_GRSA.tex  results_mean_GRSA.xlsx  results_mean_GRSA_BL.tex  results_mean_GRSA_BL.xlsx  results_mean_GRSA_Mej.tex  results_mean_GRSA_Mej.xlsx  results_mean_GRSA_Todo.tex  results_mean_GRSA_Todo.xlsx
Data tacolab/Dim30/: results_mean_GRSA.tex  results_mean_GRSA.xlsx  results_mean_GRSA_BL.tex  results_mean_GRSA_BL.xlsx  results_mean_GRSA_Mej.tex  results_mean_GRSA_Mej.xlsx  results_mean_Todo.tex  results_mean_Todo.xlsx
Data tacolab/Dim50/: results_mean_GRSA.tex  results_mean_GRSA.xlsx  results_mean_GRSA_BL.tex  results_mean_GRSA_BL.xlsx  results_mean_GRSA_Mej.tex  results_mean_GRSA_Mej.xlsx  results_mean_GRSA_Todo.tex  results_mean_GRSA_Todo.xlsx
software/FUENTES/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
software/FUENTES/INCLUDE/: aux.h  practicaAlternativa.hpp
software/FUENTES/SRC/: aux.cpp  cec17.c  main.cpp  practica2.cpp  practicaAlternativa.cpp
